Version 2.2.1
=============
* Fixed a minor bug where additional arguments to the plot function when diagnostic=TRUE were not passed through to the plot.

Version 2.2
=============
* Changed BinSeg and Segneigh to give nice errors when Q=0.
* Added "ths", Thesis advisor to Idris Eckley (RK advisor) and Paul Fearnhead (KH advisor).
* Changed penalties such that with a postfix 0 i.e. SIC0 we DO NOT count the changepoint as a parameter (this was previously SIC) and wihtout a postfix i.e. SIC we count the changepoint as a parameter (this was previously SIC1). This change brings the package in line with some theoretical results and empirical evidence that including the change in parameter estimation is preferred.  This also affects the MBIC definition which now also includes the number of changepoints.
* Fixed minor bug in range_of_penalties code 
* Removed documentation for accessor and replacement functions to improve usability for new users.  Thanks to Hadley Wickham for suggesting this.
* Removed the row of zeroes in the cpts.full slot for method="SegNeigh" in the cpt.range class.
* When method="SegNeigh" the cpt.range class now returns the difference in likelihood in the pen.value.full slots (previously this was the likelihood).  This brings the reporting in line with method="BinSeg".
* When using test.stat="CSS" or test.stat="CUSUM" there is now a warning that traditional penalty values are not advised.
* Created a new plot function for cpt.range objects. Behaves in the same way as the plot function for cpt objects but has two extra arguments, ncpts (numeric) and diagnostic (TRUE or FALSE).  
- The ncpts parameter by default is NA, thus plotting the optimal segmentation according to the penalty.  If the number is specified then the segmentation corresponding to that number is plotted.  