@@ -13,7 +13,7 @@ Implements various mainstream and specialised changepoint methods for finding si
 Package: \tab changepoint\cr
 Type: \tab Package\cr
 Version: \tab 2.2.1 \cr
-Date: \tab 2015-11-09\cr
+Date: \tab 2016-01-05\cr
 License: \tab GPL\cr
 LazyLoad: \tab yes\cr
 }
